# ros-tester-testing-debug

./: docker-compose.yml
host/: build_errors.txt  build_output.txt  end_time.txt  input.json  output.json  py_build_exec_errors.txt  py_test_exec_errors.txt  run_tests_output.txt  start_time.txt  test_errors.txt
host/test_results/: rosunit-cpp_simple.xml
host/videos/cpp_simple_2021-05-16-22-27-14/: robot_camera_image_raw.avi
student/: robot.py
tester/pibot_controls/: CMakeLists.txt
tester/pibot_gazebo/test/SIM/: .cpp_simple.cpp.swp  cpp_simple.test  simple.test
